<resources>
    <string name="app_name" translatable="false">First</string>
    <string name="cancel">Cancel</string>
    <string name="login" translatable="false">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up_question">Have you got an account? Sign up here</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="mail" translatable="false">Mail</string>
    <string name="alredy_have_acc">Alredy have an account? Log in here</string>
    <string name="signUp">Sing Up</string>
    <string name="more_options">More Options</string>
    <string name="settings">Settings</string>
    <string name="bottom_app_bar">Bottom app bar</string>
    <string name="bottom_navigation">Bottom navigation</string>
    <string name="logout">Logout</string>
    <string name="leave">Leave?</string>
    <string name="leave_dialog">Are you sure you want to leave?</string>
</resources>