<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/key"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/more_options"
            android:title="@string/more_options"
            android:icon="@drawable/ic_baseline_more_vert_24"
            app:showAsAction="ifRoom">

        <menu>

            <item
                    android:id="@+id/bottom_app"
                    android:title="@string/bottom_app_bar"
                    app:showAsAction="never" />

            <item
                    android:id="@+id/bottom_nav"
                    android:title="@string/bottom_navigation"
                    app:showAsAction="never" />


            <item
                    android:id="@+id/close"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    app:showAsAction="never" />

        </menu>

    </item>
</menu>