<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/girl"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/tree"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="128dp"
        android:src="@drawable/ic_world"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilusername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tree"
        app:startIconDrawable="@android:drawable/ic_btn_speak_now"

        >

        <EditText
            style="@style/UsernameEText"
            android:hint="@string/username" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tilusername"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

        <EditText
            style="@style/PasswordEText"
            android:hint="@string/password">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login"
        style="@style/MainBut"
        android:layout_width="120dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tilpassword" />

    <Button
        android:id="@+id/cancel"
        style="@style/MainButDark"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/login"
        app:layout_constraintTop_toTopOf="@id/login" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_question"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/cancel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />


</androidx.constraintlayout.widget.ConstraintLayout>